# Cubebert

./: .gitignore  CMakeLists.txt  CubeSolver3.sln  LICENSE  README  README.md
CubeSolver3/: CubeMath.cpp  CubeSearch.cpp  CubeSolver3.vcxproj  CubeSolver3.vcxproj.filters  StickerCube.cpp  StickerCube.h  TableManager.cpp  main.cpp
CubeSolver3/BotCode/: cs3  stepper_motor.cpp  stepper_motor.h
lib/: CMakeLists.txt
lib/ClawControl/: CMakeLists.txt
lib/CubeRecognition/: CMakeLists.txt  color_math.cpp  color_math.h  estimated_cube.cpp  estimated_cube.h  process_cube.cpp  process_cube.h
lib/CubeSolver/: CMakeLists.txt  ClawAlgorithm.cpp  ClawAlgorithm.h  ClawAlgorithm2.h  CubeConstants.cpp  CubeConstants.h  CubeMath.cpp  CubeMath.h  CubeSearch.cpp  CubeSearch.h  StickerCube.cpp  StickerCube.h  TableManager.cpp  TableManager.h  algorithm_optimiser.h  cube_constants.cpp  cube_constants.h  cube_math.cpp  cube_math.h  cube_search.cpp  cube_search.h  sticker_cube.cpp  sticker_cube.h  table_manager.cpp  table_manager.h
lib/Firmware/: CMakeLists.txt  stepper_motor.cpp  stepper_motor.h
lib/FirmwareIPC/: CMakeLists.txt  Serial.cpp  fipc.cpp  fipc.h  i2c.c  i2c.h
lib/Logger/: CMakeLists.txt  logger.cpp  logger.h
lib/bot/: CMakeLists.txt  axis_controller.cpp  axis_controller.h  main.cpp
lib/solver/: CMakeLists.txt  CubeConstants.cpp
libext/: CMakeLists.txt  raspicam.cmake.in
libext/stb_image/: CMakeLists.txt  LICENSE
scripts/: i2c
